--- a/environments/py-3.12-linux-64-dev.conda.lock.yml
+++ b/environments/py-3.12-linux-64-dev.conda.lock.yml
@@ -29,7 +29,7 @@ dependencies:
   - brotli-python=1.1.0=py312h2ec8cdc_2
   - bzip2=1.0.8=h4bc722e_7
   - c-ares=1.34.5=hb9d3cd8_0
-  - ca-certificates=2025.1.31=hbcca054_0
+  - ca-certificates=2025.4.26=hbd8a1cb_0
   - cached-property=1.5.2=hd8ed1ab_1
   - cached_property=1.5.2=pyha770c72_1
   - certifi=2025.1.31=pyhd8ed1ab_0
@@ -54,20 +54,20 @@ dependencies:
   - distributed=2025.3.0=pyhd8ed1ab_0
   - docutils=0.18.1=py312h7900ff3_0
   - exceptiongroup=1.2.2=pyhd8ed1ab_1
-  - executing=2.1.0=pyhd8ed1ab_1
+  - executing=2.2.0=pyhd8ed1ab_0
   - fasteners=0.19=pyhd8ed1ab_1
   - fonttools=4.57.0=py312h178313f_0
   - fqdn=1.5.1=pyhd8ed1ab_1
-  - freetype=2.13.3=h48d6fc4_0
+  - freetype=2.13.3=ha770c72_1
   - fsspec=2025.3.2=pyhd8ed1ab_0
   - geoana=0.7.2=py312hc39e661_0
-  - greenlet=3.2.0=py312h2ec8cdc_0
-  - h11=0.14.0=pyhd8ed1ab_1
+  - greenlet=3.2.1=py312h2ec8cdc_0
+  - h11=0.16.0=pyhd8ed1ab_0
   - h2=4.2.0=pyhd8ed1ab_0
   - h5py=3.13.0=nompi_py312hedeef09_100
   - hdf5=1.14.3=nompi_h2d575fe_109
   - hpack=4.1.0=pyhd8ed1ab_0
-  - httpcore=1.0.7=pyh29332c3_1
+  - httpcore=1.0.9=pyh29332c3_0
   - httpx=0.28.1=pyhd8ed1ab_0
   - hyperframe=6.1.0=pyhd8ed1ab_0
   - idna=3.10=pyhd8ed1ab_1
@@ -77,7 +77,7 @@ dependencies:
   - importlib_resources=6.5.2=pyhd8ed1ab_0
   - iniconfig=2.0.0=pyhd8ed1ab_1
   - ipykernel=6.29.5=pyh3099207_0
-  - ipython=9.1.0=pyhfb0248b_0
+  - ipython=9.2.0=pyhfb0248b_0
   - ipython_genutils=0.2.0=pyhd8ed1ab_2
   - ipython_pygments_lexers=1.1.1=pyhd8ed1ab_0
   - ipywidgets=7.8.5=pyhd8ed1ab_0
@@ -89,7 +89,7 @@ dependencies:
   - json5=0.12.0=pyhd8ed1ab_0
   - jsonpointer=3.0.0=py312h7900ff3_1
   - jsonschema=4.23.0=pyhd8ed1ab_1
-  - jsonschema-specifications=2024.10.1=pyhd8ed1ab_1
+  - jsonschema-specifications=2025.4.1=pyh29332c3_0
   - jsonschema-with-format-nongpl=4.23.0=hd8ed1ab_1
   - jupyter-book=1.0.3=pyhd8ed1ab_1
   - jupyter-cache=1.0.1=pyhff2d567_0
@@ -99,18 +99,18 @@ dependencies:
   - jupyter_events=0.12.0=pyh29332c3_0
   - jupyter_server=2.15.0=pyhd8ed1ab_0
   - jupyter_server_terminals=0.5.3=pyhd8ed1ab_1
-  - jupyterlab=4.4.0=pyhd8ed1ab_0
+  - jupyterlab=4.4.1=pyhd8ed1ab_0
   - jupyterlab_pygments=0.3.0=pyhd8ed1ab_2
   - jupyterlab_server=2.27.3=pyhd8ed1ab_1
   - jupyterlab_widgets=1.1.11=pyhd8ed1ab_0
-  - jupytext=1.17.0=pyhbbac1ac_0
+  - jupytext=1.17.1=pyh80e38bb_0
   - keyutils=1.6.1=h166bdaf_0
   - kiwisolver=1.4.8=py312h84d6215_0
   - krb5=1.21.3=h659f571_0
   - latexcodec=2.0.1=pyh9f0ad1d_0
   - lcms2=2.17=h717163a_0
   - ld_impl_linux-64=2.43=h712a8e2_4
-  - lerc=4.0.0=h27087fc_0
+  - lerc=4.0.0=h0aef613_1
   - libaec=1.1.3=h59595ed_0
   - libblas=3.9.0=31_hfdb39a5_mkl
   - libbrotlicommon=1.1.0=hb9d3cd8_2
@@ -118,19 +118,21 @@ dependencies:
   - libbrotlienc=1.1.0=hb9d3cd8_2
   - libcblas=3.9.0=31_h372d94f_mkl
   - libcurl=8.13.0=h332b0f4_0
-  - libdeflate=1.23=h4ddbbb0_0
+  - libdeflate=1.23=h86f0d12_0
   - libdlf=0.3.0=pyhd8ed1ab_1
   - libedit=3.1.20250104=pl5321h7949ede_0
   - libev=4.33=hd590300_2
   - libexpat=2.7.0=h5888daf_0
   - libffi=3.4.6=h2dba641_1
+  - libfreetype=2.13.3=ha770c72_1
+  - libfreetype6=2.13.3=h48d6fc4_1
   - libgcc=14.2.0=h767d61c_2
   - libgcc-ng=14.2.0=h69a702a_2
   - libgfortran=14.2.0=h69a702a_2
   - libgfortran5=14.2.0=hf1ad2bd_2
   - libhwloc=2.11.2=default_h0d58e46_1001
   - libiconv=1.18=h4ce23a2_1
-  - libjpeg-turbo=3.0.0=hd590300_1
+  - libjpeg-turbo=3.1.0=hb9d3cd8_0
   - liblapack=3.9.0=31_hc41d3b0_mkl
   - liblzma=5.8.1=hb9d3cd8_0
   - libnghttp2=1.64.0=h161d5f1_0
@@ -139,10 +141,10 @@ dependencies:
   - libscotch=7.0.6=hea33c07_1
   - libsodium=1.0.20=h4ab18f5_0
   - libsqlite=3.49.1=hee588c1_2
-  - libssh2=1.11.1=hf672d98_0
+  - libssh2=1.11.1=hcf80075_0
   - libstdcxx=14.2.0=h8f9b012_2
   - libstdcxx-ng=14.2.0=h4852527_2
-  - libtiff=4.7.0=hd9ff511_3
+  - libtiff=4.7.0=hd9ff511_4
   - libuuid=2.38.1=h0b41bf4_0
   - libwebp-base=1.5.0=h851e524_0
   - libxcb=1.17.0=h8a09558_0
@@ -150,7 +152,7 @@ dependencies:
   - libxml2=2.13.7=h81593ed_1
   - libzlib=1.3.1=hb9d3cd8_2
   - linkify-it-py=2.0.3=pyhd8ed1ab_1
-  - llvm-openmp=20.1.3=h024ca30_0
+  - llvm-openmp=20.1.4=h024ca30_0
   - locket=1.0.0=pyhd8ed1ab_0
   - markdown-it-py=2.2.0=pyhd8ed1ab_0
   - markupsafe=3.0.2=py312h178313f_1
@@ -163,8 +165,8 @@ dependencies:
   - mistune=3.1.3=pyh29332c3_0
   - mkl=2024.2.2=ha957f24_16
   - msgpack-python=1.1.0=py312h68727a3_0
-  - mumps-include=5.7.3=h82cca05_9
-  - mumps-seq=5.7.3=hb5d91fa_9
+  - mumps-include=5.7.3=h82cca05_10
+  - mumps-seq=5.7.3=h06cbf8f_10
   - munkres=1.1.4=pyh9f0ad1d_0
   - myst-nb=1.2.0=pyh29332c3_0
   - myst-parser=1.0.0=pyhd8ed1ab_0
@@ -175,14 +177,14 @@ dependencies:
   - nbformat=5.10.4=pyhd8ed1ab_1
   - ncurses=6.5=h2d0b736_3
   - nest-asyncio=1.6.0=pyhd8ed1ab_1
-  - notebook=7.4.0=pyhd8ed1ab_0
+  - notebook=7.4.1=pyhd8ed1ab_0
   - notebook-shim=0.2.4=pyhd8ed1ab_1
   - numcodecs=0.15.1=py312hf9745cd_0
   - numpy=1.26.4=py312heda63a1_0
   - openjpeg=2.5.3=h5fbd93e_0
   - openssl=3.5.0=h7b32b05_0
   - overrides=7.7.0=pyhd8ed1ab_1
-  - packaging=24.2=pyhd8ed1ab_2
+  - packaging=25.0=pyh29332c3_1
   - pandas=2.2.3=py312hf9745cd_3
   - pandoc=3.6.4=ha770c72_0
   - pandocfilters=1.5.0=pyhd8ed1ab_0
@@ -191,7 +193,7 @@ dependencies:
   - pexpect=4.9.0=pyhd8ed1ab_1
   - pickleshare=0.7.5=pyhd8ed1ab_1004
   - pillow=10.3.0=py312h287a98d_1
-  - pip=25.0.1=pyh8b19718_0
+  - pip=25.1=pyh8b19718_0
   - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_2
   - platformdirs=4.3.7=pyh29332c3_0
   - pluggy=1.5.0=pyhd8ed1ab_1
@@ -221,7 +223,7 @@ dependencies:
   - python-json-logger=2.0.7=pyhd8ed1ab_0
   - python-mumps=0.0.3=py312h6ad3ee3_0
   - python-tzdata=2025.2=pyhd8ed1ab_0
-  - python_abi=3.12=6_cp312
+  - python_abi=3.12=7_cp312
   - pytz=2025.2=pyhd8ed1ab_0
   - pyyaml=6.0.2=py312h178313f_2
   - pyzmq=26.4.0=py312hbf22597_0
@@ -235,7 +237,7 @@ dependencies:
   - scikit-learn=1.4.2=py312h1fcc3ea_1
   - scipy=1.14.1=py312h62794b6_2
   - send2trash=1.8.3=pyh0d859eb_1
-  - setuptools=78.1.0=pyhff2d567_0
+  - setuptools=80.1.0=pyhff2d567_0
   - six=1.17.0=pyhd8ed1ab_0
   - sniffio=1.3.1=pyhd8ed1ab_1
   - snowballstemmer=2.2.0=pyhd8ed1ab_0
@@ -293,20 +295,20 @@ dependencies:
   - wrapt=1.17.2=py312h66e93f0_0
   - xorg-libxau=1.0.12=hb9d3cd8_0
   - xorg-libxdmcp=1.1.5=hb9d3cd8_0
-  - xyzservices=2025.1.0=pyhd8ed1ab_0
+  - xyzservices=2025.4.0=pyhd8ed1ab_0
   - yaml=0.2.5=h7f98852_2
   - zarr=2.14.2=pyhd8ed1ab_0
   - zeromq=4.3.5=h3b0a872_7
   - zict=3.0.0=pyhd8ed1ab_1
   - zipp=3.21.0=pyhd8ed1ab_1
-  - zstandard=0.23.0=py312h66e93f0_1
+  - zstandard=0.23.0=py312h66e93f0_2
   - zstd=1.5.7=hb8e6e7a_2
   - pip:
-      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@6e21320c89581dccb1635d8460dfe296ec41b6da
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@b0ac79293314952d7499c9412ae811c2b9f81a29
-      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@24027d81b65df99d5f582acc4497ed33df8a3396
-      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@e9c99d6fd5d324571a2717990aecb3ed673cbaca
-      - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@d5959a0e19b45a89eb8a02cd608bc8accb74adb7
+    - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@6e21320c89581dccb1635d8460dfe296ec41b6da
+    - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@a004f090c7ad51fd1503e5af0126c47f71b9ef98
+    - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@24027d81b65df99d5f582acc4497ed33df8a3396
+    - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@e9c99d6fd5d324571a2717990aecb3ed673cbaca
+    - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@d5959a0e19b45a89eb8a02cd608bc8accb74adb7
 
 variables:
   KMP_WARNINGS: 0
