--- a/environments/py-3.10-win-64.conda.lock.yml
+++ b/environments/py-3.10-win-64.conda.lock.yml
@@ -14,7 +14,7 @@ dependencies:
   - brotli-bin=1.1.0=h2466b09_2
   - brotli-python=1.1.0=py310h9e98ed7_2
   - bzip2=1.0.8=h2466b09_7
-  - ca-certificates=2025.1.31=h56e8100_0
+  - ca-certificates=2025.4.26=h4c7d964_0
   - cached-property=1.5.2=hd8ed1ab_1
   - cached_property=1.5.2=pyha770c72_1
   - certifi=2025.1.31=pyhd8ed1ab_0
@@ -30,7 +30,7 @@ dependencies:
   - distributed=2025.3.0=pyhd8ed1ab_0
   - fasteners=0.19=pyhd8ed1ab_1
   - fonttools=4.57.0=py310h38315fa_0
-  - freetype=2.13.3=h0b5ce68_0
+  - freetype=2.13.3=h57928b3_1
   - fsspec=2025.3.2=pyhd8ed1ab_0
   - geoana=0.7.2=py310h3e8ed56_0
   - h2=4.2.0=pyhd8ed1ab_0
@@ -45,7 +45,7 @@ dependencies:
   - kiwisolver=1.4.7=py310hc19bc0b_0
   - krb5=1.21.3=hdf4eb48_0
   - lcms2=2.17=hbcf6048_0
-  - lerc=4.0.0=h63175ca_0
+  - lerc=4.0.0=h6470a55_1
   - libaec=1.1.3=h63175ca_0
   - libblas=3.9.0=31_h641d27c_mkl
   - libbrotlicommon=1.1.0=h2466b09_2
@@ -53,43 +53,45 @@ dependencies:
   - libbrotlienc=1.1.0=h2466b09_2
   - libcblas=3.9.0=31_h5e41251_mkl
   - libcurl=8.13.0=h88aaa65_0
-  - libdeflate=1.23=h9062f6e_0
+  - libdeflate=1.23=h76ddb4d_0
   - libdlf=0.3.0=pyhd8ed1ab_1
   - libexpat=2.7.0=he0c23c2_0
   - libffi=3.4.6=h537db12_1
+  - libfreetype=2.13.3=h57928b3_1
+  - libfreetype6=2.13.3=h0b5ce68_1
   - libgcc=14.2.0=h1383e82_2
   - libgomp=14.2.0=h1383e82_2
   - libhwloc=2.11.2=default_ha69328c_1001
   - libiconv=1.18=h135ad9c_1
-  - libjpeg-turbo=3.0.0=hcfcfb64_1
+  - libjpeg-turbo=3.1.0=h2466b09_0
   - liblapack=3.9.0=31_h1aa476e_mkl
   - liblzma=5.8.1=h2466b09_0
-  - libpng=1.6.47=had7236b_0
+  - libpng=1.6.47=h7a4582a_0
   - libsqlite=3.49.1=h67fdade_2
-  - libssh2=1.11.1=he619c9f_0
-  - libtiff=4.7.0=h797046b_3
+  - libssh2=1.11.1=h9aa295b_0
+  - libtiff=4.7.0=h797046b_4
   - libwebp-base=1.5.0=h3b0e114_0
   - libwinpthread=12.0.0.r4.gg4f2fc60ca=h57928b3_9
   - libxcb=1.17.0=h0e4246c_0
   - libxml2=2.13.7=h442d1da_1
   - libzlib=1.3.1=h2466b09_2
-  - llvm-openmp=20.1.3=h30eaf37_0
+  - llvm-openmp=20.1.4=h30eaf37_0
   - locket=1.0.0=pyhd8ed1ab_0
   - markupsafe=3.0.2=py310h38315fa_1
   - matplotlib-base=3.8.4=py310hadb10a8_2
   - mkl=2024.2.2=h66d3029_15
   - msgpack-python=1.1.0=py310hc19bc0b_0
-  - mumps-seq=5.7.3=hbaa6519_9
+  - mumps-seq=5.7.3=hbaa6519_10
   - munkres=1.1.4=pyh9f0ad1d_0
   - numcodecs=0.13.1=py310hb4db72f_0
   - numpy=1.26.4=py310hf667824_0
   - openjpeg=2.5.3=h4d64b90_0
   - openssl=3.5.0=ha4e3fda_0
-  - packaging=24.2=pyhd8ed1ab_2
+  - packaging=25.0=pyh29332c3_1
   - pandas=2.2.3=py310hb4db72f_3
   - partd=1.4.2=pyhd8ed1ab_0
   - pillow=10.3.0=py310h3e38d90_1
-  - pip=25.0.1=pyh8b19718_0
+  - pip=25.1=pyh8b19718_0
   - psutil=7.0.0=py310ha8f682b_0
   - pthread-stubs=0.4=h0e40799_1002
   - pycparser=2.22=pyh29332c3_1
@@ -103,12 +105,12 @@ dependencies:
   - python-dateutil=2.9.0.post0=pyhff2d567_1
   - python-mumps=0.0.3=py310hb64895d_0
   - python-tzdata=2025.2=pyhd8ed1ab_0
-  - python_abi=3.10=6_cp310
+  - python_abi=3.10=7_cp310
   - pytz=2025.2=pyhd8ed1ab_0
   - pyyaml=6.0.2=py310h38315fa_2
   - scikit-learn=1.4.2=py310hf2a6c47_1
   - scipy=1.14.1=py310hbd0dde3_2
-  - setuptools=78.1.0=pyhff2d567_0
+  - setuptools=80.1.0=pyhff2d567_0
   - six=1.17.0=pyhd8ed1ab_0
   - sortedcontainers=2.4.0=pyhd8ed1ab_1
   - tbb=2021.13.0=h62715c5_1
@@ -132,19 +134,19 @@ dependencies:
   - win_inet_pton=1.1.0=pyh7428d3b_8
   - xorg-libxau=1.0.12=h0e40799_0
   - xorg-libxdmcp=1.1.5=h0e40799_0
-  - xyzservices=2025.1.0=pyhd8ed1ab_0
+  - xyzservices=2025.4.0=pyhd8ed1ab_0
   - yaml=0.2.5=h8ffe710_2
   - zarr=2.14.2=pyhd8ed1ab_0
   - zict=3.0.0=pyhd8ed1ab_1
   - zipp=3.21.0=pyhd8ed1ab_1
-  - zstandard=0.23.0=py310ha8f682b_1
+  - zstandard=0.23.0=py310ha8f682b_2
   - zstd=1.5.7=hbeecb71_2
   - pip:
-      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@6e21320c89581dccb1635d8460dfe296ec41b6da
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@b0ac79293314952d7499c9412ae811c2b9f81a29
-      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@24027d81b65df99d5f582acc4497ed33df8a3396
-      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@e9c99d6fd5d324571a2717990aecb3ed673cbaca
-      - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@d5959a0e19b45a89eb8a02cd608bc8accb74adb7
+    - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@6e21320c89581dccb1635d8460dfe296ec41b6da
+    - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@a004f090c7ad51fd1503e5af0126c47f71b9ef98
+    - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@24027d81b65df99d5f582acc4497ed33df8a3396
+    - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@e9c99d6fd5d324571a2717990aecb3ed673cbaca
+    - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@d5959a0e19b45a89eb8a02cd608bc8accb74adb7
 
 variables:
   KMP_WARNINGS: 0
