--- a/environments/py-3.12-win-64-dev.conda.lock.yml
+++ b/environments/py-3.12-win-64-dev.conda.lock.yml
@@ -28,7 +28,7 @@ dependencies:
   - brotli-bin=1.1.0=h2466b09_2
   - brotli-python=1.1.0=py312h275cf98_2
   - bzip2=1.0.8=h2466b09_7
-  - ca-certificates=2025.1.31=h56e8100_0
+  - ca-certificates=2025.4.26=h4c7d964_0
   - cached-property=1.5.2=hd8ed1ab_1
   - cached_property=1.5.2=pyha770c72_1
   - certifi=2025.1.31=pyhd8ed1ab_0
@@ -54,20 +54,20 @@ dependencies:
   - distributed=2025.3.0=pyhd8ed1ab_0
   - docutils=0.18.1=py312h2e8e312_0
   - exceptiongroup=1.2.2=pyhd8ed1ab_1
-  - executing=2.1.0=pyhd8ed1ab_1
+  - executing=2.2.0=pyhd8ed1ab_0
   - fasteners=0.19=pyhd8ed1ab_1
   - fonttools=4.57.0=py312h31fea79_0
   - fqdn=1.5.1=pyhd8ed1ab_1
-  - freetype=2.13.3=h0b5ce68_0
+  - freetype=2.13.3=h57928b3_1
   - fsspec=2025.3.2=pyhd8ed1ab_0
   - geoana=0.7.2=py312hbaa7e33_0
-  - greenlet=3.2.0=py312h275cf98_0
-  - h11=0.14.0=pyhd8ed1ab_1
+  - greenlet=3.2.1=py312h275cf98_0
+  - h11=0.16.0=pyhd8ed1ab_0
   - h2=4.2.0=pyhd8ed1ab_0
   - h5py=3.13.0=nompi_py312ha036244_100
   - hdf5=1.14.3=nompi_hb2c4d47_109
   - hpack=4.1.0=pyhd8ed1ab_0
-  - httpcore=1.0.7=pyh29332c3_1
+  - httpcore=1.0.9=pyh29332c3_0
   - httpx=0.28.1=pyhd8ed1ab_0
   - hyperframe=6.1.0=pyhd8ed1ab_0
   - idna=3.10=pyhd8ed1ab_1
@@ -78,7 +78,7 @@ dependencies:
   - iniconfig=2.0.0=pyhd8ed1ab_1
   - intel-openmp=2024.2.1=h57928b3_1083
   - ipykernel=6.29.5=pyh4bbf305_0
-  - ipython=9.1.0=pyhca29cf9_0
+  - ipython=9.2.0=pyhca29cf9_0
   - ipython_genutils=0.2.0=pyhd8ed1ab_2
   - ipython_pygments_lexers=1.1.1=pyhd8ed1ab_0
   - ipywidgets=7.8.5=pyhd8ed1ab_0
@@ -90,7 +90,7 @@ dependencies:
   - json5=0.12.0=pyhd8ed1ab_0
   - jsonpointer=3.0.0=py312h2e8e312_1
   - jsonschema=4.23.0=pyhd8ed1ab_1
-  - jsonschema-specifications=2024.10.1=pyhd8ed1ab_1
+  - jsonschema-specifications=2025.4.1=pyh29332c3_0
   - jsonschema-with-format-nongpl=4.23.0=hd8ed1ab_1
   - jupyter-book=1.0.3=pyhd8ed1ab_1
   - jupyter-cache=1.0.1=pyhff2d567_0
@@ -100,16 +100,16 @@ dependencies:
   - jupyter_events=0.12.0=pyh29332c3_0
   - jupyter_server=2.15.0=pyhd8ed1ab_0
   - jupyter_server_terminals=0.5.3=pyhd8ed1ab_1
-  - jupyterlab=4.4.0=pyhd8ed1ab_0
+  - jupyterlab=4.4.1=pyhd8ed1ab_0
   - jupyterlab_pygments=0.3.0=pyhd8ed1ab_2
   - jupyterlab_server=2.27.3=pyhd8ed1ab_1
   - jupyterlab_widgets=1.1.11=pyhd8ed1ab_0
-  - jupytext=1.17.0=pyhbbac1ac_0
+  - jupytext=1.17.1=pyh80e38bb_0
   - kiwisolver=1.4.8=py312hc790b64_0
   - krb5=1.21.3=hdf4eb48_0
   - latexcodec=2.0.1=pyh9f0ad1d_0
   - lcms2=2.17=hbcf6048_0
-  - lerc=4.0.0=h63175ca_0
+  - lerc=4.0.0=h6470a55_1
   - libaec=1.1.3=h63175ca_0
   - libblas=3.9.0=31_h641d27c_mkl
   - libbrotlicommon=1.1.0=h2466b09_2
@@ -117,29 +117,31 @@ dependencies:
   - libbrotlienc=1.1.0=h2466b09_2
   - libcblas=3.9.0=31_h5e41251_mkl
   - libcurl=8.13.0=h88aaa65_0
-  - libdeflate=1.23=h9062f6e_0
+  - libdeflate=1.23=h76ddb4d_0
   - libdlf=0.3.0=pyhd8ed1ab_1
   - libexpat=2.7.0=he0c23c2_0
   - libffi=3.4.6=h537db12_1
+  - libfreetype=2.13.3=h57928b3_1
+  - libfreetype6=2.13.3=h0b5ce68_1
   - libgcc=14.2.0=h1383e82_2
   - libgomp=14.2.0=h1383e82_2
   - libhwloc=2.11.2=default_ha69328c_1001
   - libiconv=1.18=h135ad9c_1
-  - libjpeg-turbo=3.0.0=hcfcfb64_1
+  - libjpeg-turbo=3.1.0=h2466b09_0
   - liblapack=3.9.0=31_h1aa476e_mkl
   - liblzma=5.8.1=h2466b09_0
-  - libpng=1.6.47=had7236b_0
+  - libpng=1.6.47=h7a4582a_0
   - libsodium=1.0.20=hc70643c_0
   - libsqlite=3.49.1=h67fdade_2
-  - libssh2=1.11.1=he619c9f_0
-  - libtiff=4.7.0=h797046b_3
+  - libssh2=1.11.1=h9aa295b_0
+  - libtiff=4.7.0=h797046b_4
   - libwebp-base=1.5.0=h3b0e114_0
   - libwinpthread=12.0.0.r4.gg4f2fc60ca=h57928b3_9
   - libxcb=1.17.0=h0e4246c_0
   - libxml2=2.13.7=h442d1da_1
   - libzlib=1.3.1=h2466b09_2
   - linkify-it-py=2.0.3=pyhd8ed1ab_1
-  - llvm-openmp=20.1.3=h30eaf37_0
+  - llvm-openmp=20.1.4=h30eaf37_0
   - locket=1.0.0=pyhd8ed1ab_0
   - markdown-it-py=2.2.0=pyhd8ed1ab_0
   - markupsafe=3.0.2=py312h31fea79_1
@@ -151,7 +153,7 @@ dependencies:
   - mistune=3.1.3=pyh29332c3_0
   - mkl=2024.2.2=h66d3029_15
   - msgpack-python=1.1.0=py312hd5eb7cc_0
-  - mumps-seq=5.7.3=hbaa6519_9
+  - mumps-seq=5.7.3=hbaa6519_10
   - munkres=1.1.4=pyh9f0ad1d_0
   - myst-nb=1.2.0=pyh29332c3_0
   - myst-parser=1.0.0=pyhd8ed1ab_0
@@ -161,14 +163,14 @@ dependencies:
   - nbconvert-pandoc=7.16.6=hed9df3c_0
   - nbformat=5.10.4=pyhd8ed1ab_1
   - nest-asyncio=1.6.0=pyhd8ed1ab_1
-  - notebook=7.4.0=pyhd8ed1ab_0
+  - notebook=7.4.1=pyhd8ed1ab_0
   - notebook-shim=0.2.4=pyhd8ed1ab_1
   - numcodecs=0.15.1=py312h72972c8_0
   - numpy=1.26.4=py312h8753938_0
   - openjpeg=2.5.3=h4d64b90_0
   - openssl=3.5.0=ha4e3fda_0
   - overrides=7.7.0=pyhd8ed1ab_1
-  - packaging=24.2=pyhd8ed1ab_2
+  - packaging=25.0=pyh29332c3_1
   - pandas=2.2.3=py312h72972c8_3
   - pandoc=3.6.4=h57928b3_0
   - pandocfilters=1.5.0=pyhd8ed1ab_0
@@ -176,7 +178,7 @@ dependencies:
   - partd=1.4.2=pyhd8ed1ab_0
   - pickleshare=0.7.5=pyhd8ed1ab_1004
   - pillow=10.3.0=py312h381445a_1
-  - pip=25.0.1=pyh8b19718_0
+  - pip=25.1=pyh8b19718_0
   - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_2
   - platformdirs=4.3.7=pyh29332c3_0
   - pluggy=1.5.0=pyhd8ed1ab_1
@@ -205,7 +207,7 @@ dependencies:
   - python-json-logger=2.0.7=pyhd8ed1ab_0
   - python-mumps=0.0.3=py312h8095395_0
   - python-tzdata=2025.2=pyhd8ed1ab_0
-  - python_abi=3.12=6_cp312
+  - python_abi=3.12=7_cp312
   - pytz=2025.2=pyhd8ed1ab_0
   - pywin32=307=py312h275cf98_3
   - pywinpty=2.0.15=py312h275cf98_0
@@ -220,7 +222,7 @@ dependencies:
   - scikit-learn=1.4.2=py312h816cc57_1
   - scipy=1.14.1=py312h337df96_2
   - send2trash=1.8.3=pyh5737063_1
-  - setuptools=78.1.0=pyhff2d567_0
+  - setuptools=80.1.0=pyhff2d567_0
   - six=1.17.0=pyhd8ed1ab_0
   - sniffio=1.3.1=pyhd8ed1ab_1
   - snowballstemmer=2.2.0=pyhd8ed1ab_0
@@ -284,20 +286,20 @@ dependencies:
   - wrapt=1.17.2=py312h4389bb4_0
   - xorg-libxau=1.0.12=h0e40799_0
   - xorg-libxdmcp=1.1.5=h0e40799_0
-  - xyzservices=2025.1.0=pyhd8ed1ab_0
+  - xyzservices=2025.4.0=pyhd8ed1ab_0
   - yaml=0.2.5=h8ffe710_2
   - zarr=2.14.2=pyhd8ed1ab_0
   - zeromq=4.3.5=ha9f60a1_7
   - zict=3.0.0=pyhd8ed1ab_1
   - zipp=3.21.0=pyhd8ed1ab_1
-  - zstandard=0.23.0=py312h4389bb4_1
+  - zstandard=0.23.0=py312h4389bb4_2
   - zstd=1.5.7=hbeecb71_2
   - pip:
-      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@6e21320c89581dccb1635d8460dfe296ec41b6da
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@b0ac79293314952d7499c9412ae811c2b9f81a29
-      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@24027d81b65df99d5f582acc4497ed33df8a3396
-      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@e9c99d6fd5d324571a2717990aecb3ed673cbaca
-      - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@d5959a0e19b45a89eb8a02cd608bc8accb74adb7
+    - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@6e21320c89581dccb1635d8460dfe296ec41b6da
+    - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@a004f090c7ad51fd1503e5af0126c47f71b9ef98
+    - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@24027d81b65df99d5f582acc4497ed33df8a3396
+    - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@e9c99d6fd5d324571a2717990aecb3ed673cbaca
+    - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@d5959a0e19b45a89eb8a02cd608bc8accb74adb7
 
 variables:
   KMP_WARNINGS: 0
