--- a/environments/py-3.12-win-64-dev.conda.lock.yml
+++ b/environments/py-3.12-win-64-dev.conda.lock.yml
@@ -33,7 +33,7 @@ dependencies:
   - cached_property=1.5.2=pyha770c72_1
   - certifi=2025.1.31=pyhd8ed1ab_0
   - cffi=1.17.1=py312h4389bb4_0
-  - charset-normalizer=3.4.1=pyhd8ed1ab_0
+  - charset-normalizer=3.4.2=pyhd8ed1ab_0
   - click=8.1.8=pyh7428d3b_0
   - cloudpickle=3.1.1=pyhd8ed1ab_0
   - colorama=0.4.6=pyhd8ed1ab_1
@@ -64,8 +64,8 @@ dependencies:
   - greenlet=3.2.1=py312h275cf98_0
   - h11=0.16.0=pyhd8ed1ab_0
   - h2=4.2.0=pyhd8ed1ab_0
-  - h5py=3.13.0=nompi_py312ha036244_100
-  - hdf5=1.14.3=nompi_hb2c4d47_109
+  - h5py=3.13.0=nompi_py312h4e244af_101
+  - hdf5=1.14.6=nompi_hd5d9e70_101
   - hpack=4.1.0=pyhd8ed1ab_0
   - httpcore=1.0.9=pyh29332c3_0
   - httpx=0.28.1=pyhd8ed1ab_0
@@ -83,10 +83,10 @@ dependencies:
   - ipython_pygments_lexers=1.1.1=pyhd8ed1ab_0
   - ipywidgets=7.8.5=pyhd8ed1ab_0
   - isoduration=20.11.0=pyhd8ed1ab_1
-  - isort=6.0.1=pyhd8ed1ab_0
+  - isort=6.0.1=pyhd8ed1ab_1
   - jedi=0.19.2=pyhd8ed1ab_1
   - jinja2=3.1.6=pyhd8ed1ab_0
-  - joblib=1.4.2=pyhd8ed1ab_1
+  - joblib=1.5.0=pyhd8ed1ab_0
   - json5=0.12.0=pyhd8ed1ab_0
   - jsonpointer=3.0.0=py312h2e8e312_1
   - jsonschema=4.23.0=pyhd8ed1ab_1
@@ -168,7 +168,7 @@ dependencies:
   - numcodecs=0.15.1=py312h72972c8_0
   - numpy=1.26.4=py312h8753938_0
   - openjpeg=2.5.3=h4d64b90_0
-  - openssl=3.5.0=ha4e3fda_0
+  - openssl=3.5.0=ha4e3fda_1
   - overrides=7.7.0=pyhd8ed1ab_1
   - packaging=25.0=pyh29332c3_1
   - pandas=2.2.3=py312h72972c8_3
@@ -178,7 +178,7 @@ dependencies:
   - partd=1.4.2=pyhd8ed1ab_0
   - pickleshare=0.7.5=pyhd8ed1ab_1004
   - pillow=10.3.0=py312h381445a_1
-  - pip=25.1=pyh8b19718_0
+  - pip=25.1.1=pyh8b19718_0
   - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_2
   - platformdirs=4.3.7=pyh29332c3_0
   - pluggy=1.5.0=pyhd8ed1ab_1
@@ -195,7 +195,7 @@ dependencies:
   - pydata-sphinx-theme=0.15.4=pyhd8ed1ab_0
   - pydiso=0.1.2=py312h01acb21_0
   - pygments=2.19.1=pyhd8ed1ab_0
-  - pylint=3.3.6=pyh29332c3_0
+  - pylint=3.3.7=pyhe01879c_0
   - pymatsolver=0.3.1=pyh48887ae_201
   - pyparsing=3.2.3=pyhd8ed1ab_1
   - pysocks=1.7.1=pyh09c184e_7
@@ -295,11 +295,11 @@ dependencies:
   - zstandard=0.23.0=py312h4389bb4_2
   - zstd=1.5.7=hbeecb71_2
   - pip:
-    - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@6e21320c89581dccb1635d8460dfe296ec41b6da
-    - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@a004f090c7ad51fd1503e5af0126c47f71b9ef98
-    - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@24027d81b65df99d5f582acc4497ed33df8a3396
-    - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@e9c99d6fd5d324571a2717990aecb3ed673cbaca
-    - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@d5959a0e19b45a89eb8a02cd608bc8accb74adb7
+      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@7b76c8132fa01d3007b883326a817a8d1e17cfc3
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@4acc52a74c4c20a6ffc7f335e431f9ef3f6392b1
+      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@24027d81b65df99d5f582acc4497ed33df8a3396
+      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@e9c99d6fd5d324571a2717990aecb3ed673cbaca
+      - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@d5959a0e19b45a89eb8a02cd608bc8accb74adb7
 
 variables:
   KMP_WARNINGS: 0
