--- a/environments/py-3.11-linux-64.conda.lock.yml
+++ b/environments/py-3.11-linux-64.conda.lock.yml
@@ -56,7 +56,7 @@ dependencies:
   - libbrotlidec=1.1.0=hb9d3cd8_2
   - libbrotlienc=1.1.0=hb9d3cd8_2
   - libcblas=3.9.0=31_h372d94f_mkl
-  - libcurl=8.14.0=h332b0f4_0
+  - libcurl=8.14.1=h332b0f4_0
   - libdeflate=1.24=h86f0d12_0
   - libdlf=0.3.0=pyhd8ed1ab_1
   - libedit=3.1.20250104=pl5321h7949ede_0
@@ -118,7 +118,7 @@ dependencies:
   - pymatsolver=0.3.1=pyh48887ae_201
   - pyparsing=3.2.3=pyhd8ed1ab_1
   - pysocks=1.7.1=pyha55dd90_7
-  - python=3.11.12=h9e4cc4f_0_cpython
+  - python=3.11.13=h9e4cc4f_0_cpython
   - python-dateutil=2.9.0.post0=pyhff2d567_1
   - python-mumps=0.0.3=py311h4b558b0_0
   - python-tzdata=2025.2=pyhd8ed1ab_0
@@ -128,7 +128,7 @@ dependencies:
   - readline=8.2=h8c095d6_2
   - scikit-learn=1.4.2=py311he08f58d_1
   - scipy=1.14.1=py311he9a78e4_2
-  - setuptools=80.8.0=pyhff2d567_0
+  - setuptools=80.9.0=pyhff2d567_0
   - six=1.17.0=pyhd8ed1ab_0
   - sortedcontainers=2.4.0=pyhd8ed1ab_1
   - tbb=2021.13.0=hceb3a55_1
@@ -138,9 +138,9 @@ dependencies:
   - toolz=1.0.0=pyhd8ed1ab_1
   - tornado=6.5.1=py311h9ecbd09_0
   - tqdm=4.67.1=pyhd8ed1ab_1
-  - typing-extensions=4.13.2=h0e9735f_0
+  - typing-extensions=4.14.0=h32cad80_0
   - typing-inspection=0.4.1=pyhd8ed1ab_0
-  - typing_extensions=4.13.2=pyh29332c3_0
+  - typing_extensions=4.14.0=pyhe01879c_0
   - tzdata=2025b=h78e105d_0
   - unicodedata2=16.0.0=py311h9ecbd09_0
   - urllib3=2.4.0=pyhd8ed1ab_0
@@ -156,7 +156,7 @@ dependencies:
   - zstandard=0.23.0=py311h9ecbd09_2
   - zstd=1.5.7=hb8e6e7a_2
   - pip:
-      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@388f8f781c834f8f1d5c6243e636112bd2fd4dcb
+      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@3deb5f2d2cd1ee39e796fa30a5fcff899e635ba0
       - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@2b2b72f906d85bf460292f66e763ff2331017b02
       - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@447de6c5c257883c4eea045cb3372bf6a1051ad1
       - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@02fbd85bf7d54b8f4336f1f0094c1c3e27714e81
