--- a/environments/py-3.12-win-64-dev.conda.lock.yml
+++ b/environments/py-3.12-win-64-dev.conda.lock.yml
@@ -11,7 +11,7 @@ dependencies:
   - alabaster=0.7.16=pyhd8ed1ab_0
   - annotated-types=0.7.0=pyhd8ed1ab_1
   - anyio=4.9.0=pyh29332c3_0
-  - argon2-cffi=23.1.0=pyhd8ed1ab_1
+  - argon2-cffi=25.1.0=pyhd8ed1ab_0
   - argon2-cffi-bindings=21.2.0=py312h4389bb4_5
   - arrow=1.3.0=pyhd8ed1ab_1
   - asciitree=0.3.3=py_2
@@ -40,7 +40,7 @@ dependencies:
   - comm=0.2.2=pyhd8ed1ab_1
   - contourpy=1.3.2=py312hd5eb7cc_0
   - coverage=7.8.2=py312h31fea79_0
-  - cpython=3.12.10=py312hd8ed1ab_0
+  - cpython=3.12.11=py312hd8ed1ab_0
   - cycler=0.12.1=pyhd8ed1ab_1
   - cytoolz=1.0.1=py312h4389bb4_0
   - dask-core=2025.3.0=pyhd8ed1ab_0
@@ -78,7 +78,7 @@ dependencies:
   - iniconfig=2.0.0=pyhd8ed1ab_1
   - intel-openmp=2024.2.1=h57928b3_1083
   - ipykernel=6.29.5=pyh4bbf305_0
-  - ipython=9.2.0=pyhca29cf9_0
+  - ipython=9.3.0=pyh6be1c34_0
   - ipython_genutils=0.2.0=pyhd8ed1ab_2
   - ipython_pygments_lexers=1.1.1=pyhd8ed1ab_0
   - ipywidgets=7.8.5=pyhd8ed1ab_0
@@ -104,7 +104,7 @@ dependencies:
   - jupyterlab_pygments=0.3.0=pyhd8ed1ab_2
   - jupyterlab_server=2.27.3=pyhd8ed1ab_1
   - jupyterlab_widgets=1.1.11=pyhd8ed1ab_0
-  - jupytext=1.17.1=pyh80e38bb_0
+  - jupytext=1.17.2=pyh80e38bb_0
   - kiwisolver=1.4.8=py312hc790b64_0
   - krb5=1.21.3=hdf4eb48_0
   - latexcodec=2.0.1=pyh9f0ad1d_0
@@ -116,7 +116,7 @@ dependencies:
   - libbrotlidec=1.1.0=h2466b09_2
   - libbrotlienc=1.1.0=h2466b09_2
   - libcblas=3.9.0=31_h5e41251_mkl
-  - libcurl=8.14.0=h88aaa65_0
+  - libcurl=8.14.1=h88aaa65_0
   - libdeflate=1.24=h76ddb4d_0
   - libdlf=0.3.0=pyhd8ed1ab_1
   - libexpat=2.7.0=he0c23c2_0
@@ -182,7 +182,7 @@ dependencies:
   - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_2
   - platformdirs=4.3.8=pyhe01879c_0
   - pluggy=1.6.0=pyhd8ed1ab_0
-  - prometheus_client=0.22.0=pyhd8ed1ab_0
+  - prometheus_client=0.22.1=pyhd8ed1ab_0
   - prompt-toolkit=3.0.51=pyha770c72_0
   - psutil=7.0.0=py312h4389bb4_0
   - pthread-stubs=0.4=h0e40799_1002
@@ -199,9 +199,9 @@ dependencies:
   - pymatsolver=0.3.1=pyh48887ae_201
   - pyparsing=3.2.3=pyhd8ed1ab_1
   - pysocks=1.7.1=pyh09c184e_7
-  - pytest=8.3.5=pyhd8ed1ab_0
+  - pytest=8.4.0=pyhd8ed1ab_0
   - pytest-cov=6.1.1=pyhd8ed1ab_0
-  - python=3.12.10=h3f84c4b_0_cpython
+  - python=3.12.11=h3f84c4b_0_cpython
   - python-dateutil=2.9.0.post0=pyhff2d567_1
   - python-fastjsonschema=2.21.1=pyhd8ed1ab_0
   - python-json-logger=2.0.7=pyhd8ed1ab_0
@@ -222,7 +222,7 @@ dependencies:
   - scikit-learn=1.4.2=py312h816cc57_1
   - scipy=1.14.1=py312h337df96_2
   - send2trash=1.8.3=pyh5737063_1
-  - setuptools=80.8.0=pyhff2d567_0
+  - setuptools=80.9.0=pyhff2d567_0
   - six=1.17.0=pyhd8ed1ab_0
   - sniffio=1.3.1=pyhd8ed1ab_1
   - snowballstemmer=3.0.1=pyhd8ed1ab_0
@@ -262,9 +262,9 @@ dependencies:
   - tqdm=4.67.1=pyhd8ed1ab_1
   - traitlets=5.14.3=pyhd8ed1ab_1
   - types-python-dateutil=2.9.0.20250516=pyhd8ed1ab_0
-  - typing-extensions=4.13.2=h0e9735f_0
+  - typing-extensions=4.14.0=h32cad80_0
   - typing-inspection=0.4.1=pyhd8ed1ab_0
-  - typing_extensions=4.13.2=pyh29332c3_0
+  - typing_extensions=4.14.0=pyhe01879c_0
   - typing_utils=0.1.0=pyhd8ed1ab_1
   - tzdata=2025b=h78e105d_0
   - uc-micro-py=1.0.3=pyhd8ed1ab_1
@@ -295,7 +295,7 @@ dependencies:
   - zstandard=0.23.0=py312h4389bb4_2
   - zstd=1.5.7=hbeecb71_2
   - pip:
-      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@388f8f781c834f8f1d5c6243e636112bd2fd4dcb
+      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@3deb5f2d2cd1ee39e796fa30a5fcff899e635ba0
       - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@2b2b72f906d85bf460292f66e763ff2331017b02
       - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@447de6c5c257883c4eea045cb3372bf6a1051ad1
       - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@02fbd85bf7d54b8f4336f1f0094c1c3e27714e81
