--- a/recipe.yaml
+++ b/recipe.yaml
@@ -26,11 +26,11 @@ requirements:
   run:
     - python >=${{ python_min }}
     # Mira packages
-    - geoapps-utils >=0.5.0a3, <0.6.dev
-    - geoh5py >=0.11.0a3, <0.12.dev
-    - mira-simpeg >=0.23.0.1b1, <0.23.1.dev
-    - octree-creation-app >=0.3.0a1, <0.4.dev
-    - param-sweeps >=0.2.1a1, <0.3.dev
+    - geoapps-utils >=0.5.0, <0.6.dev
+    - geoh5py >=0.11.0, <0.12.dev
+    - mira-simpeg >=0.23.0.1, <0.23.1.dev
+    - octree-creation-app >=0.3.0, <0.4.dev
+    - param-sweeps >=0.2.1, <0.3.dev
     # direct dependencies
     - dask-core >=2025.3, <2025.4.dev
     - discretize >=0.11.0, <0.12.dev
