--- a/environments/py-3.10-win-64-dev.conda.lock.yml
+++ b/environments/py-3.10-win-64-dev.conda.lock.yml
@@ -39,7 +39,7 @@ dependencies:
   - colorama=0.4.6=pyhd8ed1ab_1
   - comm=0.2.2=pyhd8ed1ab_1
   - contourpy=1.3.2=py310hc19bc0b_0
-  - coverage=7.9.1=py310h38315fa_0
+  - coverage=7.9.2=py310hdb0e946_0
   - cpython=3.10.18=py310hd8ed1ab_0
   - cycler=0.12.1=pyhd8ed1ab_1
   - cytoolz=1.0.1=py310ha8f682b_0
@@ -55,7 +55,7 @@ dependencies:
   - exceptiongroup=1.3.0=pyhd8ed1ab_0
   - executing=2.2.0=pyhd8ed1ab_0
   - fasteners=0.19=pyhd8ed1ab_1
-  - fonttools=4.58.4=py310h38315fa_0
+  - fonttools=4.58.5=py310hdb0e946_0
   - fqdn=1.5.1=pyhd8ed1ab_1
   - freetype=2.13.3=h57928b3_1
   - fsspec=2025.5.1=pyhd8ed1ab_0
@@ -98,12 +98,12 @@ dependencies:
   - jupyter_events=0.12.0=pyh29332c3_0
   - jupyter_server=2.16.0=pyhe01879c_0
   - jupyter_server_terminals=0.5.3=pyhd8ed1ab_1
-  - jupyterlab=4.4.3=pyhd8ed1ab_0
+  - jupyterlab=4.4.4=pyhd8ed1ab_0
   - jupyterlab_pygments=0.3.0=pyhd8ed1ab_2
   - jupyterlab_server=2.27.3=pyhd8ed1ab_1
   - jupyterlab_widgets=1.1.11=pyhd8ed1ab_0
   - jupytext=1.17.2=pyh80e38bb_0
-  - kiwisolver=1.4.7=py310hc19bc0b_0
+  - kiwisolver=1.4.8=py310he9f1925_1
   - krb5=1.21.3=hdf4eb48_0
   - latexcodec=2.0.1=pyh9f0ad1d_0
   - lcms2=2.17=hbcf6048_0
@@ -128,10 +128,10 @@ dependencies:
   - libjpeg-turbo=3.1.0=h2466b09_0
   - liblapack=3.9.0=32_h1aa476e_mkl
   - liblzma=5.8.1=h2466b09_2
-  - libpng=1.6.49=h7a4582a_0
+  - libpng=1.6.50=h95bef1e_0
   - libsodium=1.0.20=hc70643c_0
   - libspatialindex=2.0.0=h5a68840_0
-  - libsqlite=3.50.1=hf5d6505_7
+  - libsqlite=3.50.2=hf5d6505_0
   - libssh2=1.11.1=h9aa295b_0
   - libtiff=4.7.0=h05922d8_5
   - libwebp-base=1.5.0=h3b0e114_0
@@ -162,12 +162,12 @@ dependencies:
   - nbconvert-pandoc=7.16.6=hed9df3c_0
   - nbformat=5.10.4=pyhd8ed1ab_1
   - nest-asyncio=1.6.0=pyhd8ed1ab_1
-  - notebook=7.4.3=pyhd8ed1ab_0
+  - notebook=7.4.4=pyhd8ed1ab_0
   - notebook-shim=0.2.4=pyhd8ed1ab_1
   - numcodecs=0.13.1=py310hb4db72f_0
   - numpy=1.26.4=py310hf667824_0
   - openjpeg=2.5.3=h4d64b90_0
-  - openssl=3.5.0=ha4e3fda_1
+  - openssl=3.5.1=h725018a_0
   - overrides=7.7.0=pyhd8ed1ab_1
   - packaging=25.0=pyh29332c3_1
   - pandas=2.3.0=py310hb4db72f_0
@@ -201,7 +201,7 @@ dependencies:
   - pytest=8.4.1=pyhd8ed1ab_0
   - pytest-cov=6.2.1=pyhd8ed1ab_0
   - python=3.10.18=h8c5b53a_0_cpython
-  - python-dateutil=2.9.0.post0=pyhff2d567_1
+  - python-dateutil=2.9.0.post0=pyhe01879c_2
   - python-fastjsonschema=2.21.1=pyhd8ed1ab_0
   - python-json-logger=2.0.7=pyhd8ed1ab_0
   - python-mumps=0.0.3=py310hb64895d_0
@@ -217,7 +217,7 @@ dependencies:
   - requests=2.32.4=pyhd8ed1ab_0
   - rfc3339-validator=0.1.4=pyhd8ed1ab_1
   - rfc3986-validator=0.1.1=pyh9f0ad1d_0
-  - rpds-py=0.25.1=py310hed05c55_0
+  - rpds-py=0.26.0=py310h034784e_0
   - rtree=1.2.0=py310h08d5ad2_1
   - scikit-learn=1.4.2=py310hf2a6c47_1
   - scipy=1.14.1=py310hbd0dde3_2
@@ -263,9 +263,9 @@ dependencies:
   - traitlets=5.14.3=pyhd8ed1ab_1
   - trimesh=4.1.8=pyhd8ed1ab_0
   - types-python-dateutil=2.9.0.20250516=pyhd8ed1ab_0
-  - typing-extensions=4.14.0=h32cad80_0
+  - typing-extensions=4.14.1=h4440ef1_0
   - typing-inspection=0.4.1=pyhd8ed1ab_0
-  - typing_extensions=4.14.0=pyhe01879c_0
+  - typing_extensions=4.14.1=pyhe01879c_0
   - typing_utils=0.1.0=pyhd8ed1ab_1
   - tzdata=2025b=h78e105d_0
   - uc-micro-py=1.0.3=pyhd8ed1ab_1
@@ -296,8 +296,8 @@ dependencies:
   - zstd=1.5.7=hbeecb71_2
   - pip:
       - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@ea323dc1e48634a19cca2b2693f989fae08880f1
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@99695a5e34812bfbb53cef84803033a91af137de
-      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@f72a1367edcb2da969002ca06f18f532340b3c27
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@87f68c3a25cb3fac2a4c9de8c0d74ec4e58d0963
+      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@bf4568452ca51fe0ec810b13b2acb4da6c26412f
       - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@02fbd85bf7d54b8f4336f1f0094c1c3e27714e81
       - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@9ed6091534d638171957a17324e1a1e8f067b434
 
