--- a/environments/py-3.10-win-64.conda.lock.yml
+++ b/environments/py-3.10-win-64.conda.lock.yml
@@ -29,7 +29,7 @@ dependencies:
   - discretize=0.11.3=py310h3e8ed56_0
   - distributed=2025.3.0=pyhd8ed1ab_0
   - fasteners=0.19=pyhd8ed1ab_1
-  - fonttools=4.58.4=py310h38315fa_0
+  - fonttools=4.58.5=py310hdb0e946_0
   - freetype=2.13.3=h57928b3_1
   - fsspec=2025.5.1=pyhd8ed1ab_0
   - geoana=0.7.2=py310h3e8ed56_0
@@ -42,7 +42,7 @@ dependencies:
   - intel-openmp=2024.2.1=h57928b3_1083
   - jinja2=3.1.6=pyhd8ed1ab_0
   - joblib=1.5.1=pyhd8ed1ab_0
-  - kiwisolver=1.4.7=py310hc19bc0b_0
+  - kiwisolver=1.4.8=py310he9f1925_1
   - krb5=1.21.3=hdf4eb48_0
   - lcms2=2.17=hbcf6048_0
   - lerc=4.0.0=h6470a55_1
@@ -66,9 +66,9 @@ dependencies:
   - libjpeg-turbo=3.1.0=h2466b09_0
   - liblapack=3.9.0=32_h1aa476e_mkl
   - liblzma=5.8.1=h2466b09_2
-  - libpng=1.6.49=h7a4582a_0
+  - libpng=1.6.50=h95bef1e_0
   - libspatialindex=2.0.0=h5a68840_0
-  - libsqlite=3.50.1=hf5d6505_7
+  - libsqlite=3.50.2=hf5d6505_0
   - libssh2=1.11.1=h9aa295b_0
   - libtiff=4.7.0=h05922d8_5
   - libwebp-base=1.5.0=h3b0e114_0
@@ -87,7 +87,7 @@ dependencies:
   - numcodecs=0.13.1=py310hb4db72f_0
   - numpy=1.26.4=py310hf667824_0
   - openjpeg=2.5.3=h4d64b90_0
-  - openssl=3.5.0=ha4e3fda_1
+  - openssl=3.5.1=h725018a_0
   - packaging=25.0=pyh29332c3_1
   - pandas=2.3.0=py310hb4db72f_0
   - partd=1.4.2=pyhd8ed1ab_0
@@ -103,7 +103,7 @@ dependencies:
   - pyparsing=3.2.3=pyhd8ed1ab_1
   - pysocks=1.7.1=pyh09c184e_7
   - python=3.10.18=h8c5b53a_0_cpython
-  - python-dateutil=2.9.0.post0=pyhff2d567_1
+  - python-dateutil=2.9.0.post0=pyhe01879c_2
   - python-mumps=0.0.3=py310hb64895d_0
   - python-tzdata=2025.2=pyhd8ed1ab_0
   - python_abi=3.10=7_cp310
@@ -123,9 +123,9 @@ dependencies:
   - tornado=6.5.1=py310ha8f682b_0
   - tqdm=4.67.1=pyhd8ed1ab_1
   - trimesh=4.1.8=pyhd8ed1ab_0
-  - typing-extensions=4.14.0=h32cad80_0
+  - typing-extensions=4.14.1=h4440ef1_0
   - typing-inspection=0.4.1=pyhd8ed1ab_0
-  - typing_extensions=4.14.0=pyhe01879c_0
+  - typing_extensions=4.14.1=pyhe01879c_0
   - tzdata=2025b=h78e105d_0
   - ucrt=10.0.22621.0=h57928b3_1
   - unicodedata2=16.0.0=py310ha8f682b_0
@@ -146,8 +146,8 @@ dependencies:
   - zstd=1.5.7=hbeecb71_2
   - pip:
       - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@ea323dc1e48634a19cca2b2693f989fae08880f1
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@99695a5e34812bfbb53cef84803033a91af137de
-      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@f72a1367edcb2da969002ca06f18f532340b3c27
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@87f68c3a25cb3fac2a4c9de8c0d74ec4e58d0963
+      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@bf4568452ca51fe0ec810b13b2acb4da6c26412f
       - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@02fbd85bf7d54b8f4336f1f0094c1c3e27714e81
       - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@9ed6091534d638171957a17324e1a1e8f067b434
 
