--- a/environments/py-3.11-linux-64.conda.lock.yml
+++ b/environments/py-3.11-linux-64.conda.lock.yml
@@ -31,7 +31,7 @@ dependencies:
   - discretize=0.11.3=py311h5b7b71f_0
   - distributed=2025.3.0=pyhd8ed1ab_0
   - fasteners=0.19=pyhd8ed1ab_1
-  - fonttools=4.58.4=py311h2dc5d0c_0
+  - fonttools=4.58.5=py311h2dc5d0c_0
   - freetype=2.13.3=ha770c72_1
   - fsspec=2025.5.1=pyhd8ed1ab_0
   - geoana=0.7.2=py311h5b7b71f_0
@@ -45,10 +45,10 @@ dependencies:
   - jinja2=3.1.6=pyhd8ed1ab_0
   - joblib=1.5.1=pyhd8ed1ab_0
   - keyutils=1.6.1=h166bdaf_0
-  - kiwisolver=1.4.7=py311hd18a35c_0
+  - kiwisolver=1.4.8=py311hd18a35c_1
   - krb5=1.21.3=h659f571_0
   - lcms2=2.17=h717163a_0
-  - ld_impl_linux-64=2.43=h1423503_5
+  - ld_impl_linux-64=2.44=h1423503_0
   - lerc=4.0.0=h0aef613_1
   - libaec=1.1.4=h3f801dc_0
   - libblas=3.9.0=32_hfdb39a5_mkl
@@ -76,10 +76,10 @@ dependencies:
   - liblzma=5.8.1=hb9d3cd8_2
   - libnghttp2=1.64.0=h161d5f1_0
   - libnsl=2.0.1=hb9d3cd8_1
-  - libpng=1.6.49=h943b412_0
+  - libpng=1.6.50=h943b412_0
   - libscotch=7.0.6=hea33c07_1
   - libspatialindex=2.0.0=he02047a_0
-  - libsqlite=3.50.1=h6cd9bfd_7
+  - libsqlite=3.50.2=h6cd9bfd_0
   - libssh2=1.11.1=hcf80075_0
   - libstdcxx=15.1.0=h8f9b012_3
   - libstdcxx-ng=15.1.0=h4852527_3
@@ -104,7 +104,7 @@ dependencies:
   - numcodecs=0.15.1=py311h7db5c69_0
   - numpy=1.26.4=py311h64a7726_0
   - openjpeg=2.5.3=h5fbd93e_0
-  - openssl=3.5.0=h7b32b05_1
+  - openssl=3.5.1=h7b32b05_0
   - packaging=25.0=pyh29332c3_1
   - pandas=2.3.0=py311h7db5c69_0
   - partd=1.4.2=pyhd8ed1ab_0
@@ -120,7 +120,7 @@ dependencies:
   - pyparsing=3.2.3=pyhd8ed1ab_1
   - pysocks=1.7.1=pyha55dd90_7
   - python=3.11.13=h9e4cc4f_0_cpython
-  - python-dateutil=2.9.0.post0=pyhff2d567_1
+  - python-dateutil=2.9.0.post0=pyhe01879c_2
   - python-mumps=0.0.3=py311h4b558b0_0
   - python-tzdata=2025.2=pyhd8ed1ab_0
   - python_abi=3.11=7_cp311
@@ -141,9 +141,9 @@ dependencies:
   - tornado=6.5.1=py311h9ecbd09_0
   - tqdm=4.67.1=pyhd8ed1ab_1
   - trimesh=4.1.8=pyhd8ed1ab_0
-  - typing-extensions=4.14.0=h32cad80_0
+  - typing-extensions=4.14.1=h4440ef1_0
   - typing-inspection=0.4.1=pyhd8ed1ab_0
-  - typing_extensions=4.14.0=pyhe01879c_0
+  - typing_extensions=4.14.1=pyhe01879c_0
   - tzdata=2025b=h78e105d_0
   - unicodedata2=16.0.0=py311h9ecbd09_0
   - urllib3=2.5.0=pyhd8ed1ab_0
@@ -160,8 +160,8 @@ dependencies:
   - zstd=1.5.7=hb8e6e7a_2
   - pip:
       - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@ea323dc1e48634a19cca2b2693f989fae08880f1
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@99695a5e34812bfbb53cef84803033a91af137de
-      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@f72a1367edcb2da969002ca06f18f532340b3c27
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@87f68c3a25cb3fac2a4c9de8c0d74ec4e58d0963
+      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@bf4568452ca51fe0ec810b13b2acb4da6c26412f
       - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@02fbd85bf7d54b8f4336f1f0094c1c3e27714e81
       - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@9ed6091534d638171957a17324e1a1e8f067b434
 
